@@ -1,0 +1,23 @@
+SAX.setDocumentLocator()
+SAX.startDocument()
+SAX.startElement(html)
+SAX.ignorableWhitespace(
+, 1)
+SAX.startElement(body)
+SAX.characters(
+, 1)
+SAX.startElement(form)
+SAX.characters(
+  , 3)
+SAX.startElement(input, type='text', name='test', value='&scaron;')
+SAX.endElement(input)
+SAX.characters(
+, 1)
+SAX.endElement(form)
+SAX.characters(
+, 1)
+SAX.endElement(body)
+SAX.ignorableWhitespace(
+, 1)
+SAX.endElement(html)
+SAX.endDocument()
