@@ -1,0 +1,7 @@
+<html>
+<body>
+<form>
+  <input type="text" name="test" value="&scaron;">
+</form>
+</body>
+</html>
